--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A library for ethereumjs wallet , import&&export wallet (support 3 ways: mnemonic , keystore,privatekey) , send ether&&dapp tokens, etc",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "example": "node ./example/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,9 @@
   "bugs": {
     "url": "https://github.com/zihuatanejp/eth-wallet-js/issues"
   },
-  "homepage": "https://github.com/zihuatanejp/eth-wallet-js#readme"
+  "homepage": "https://github.com/zihuatanejp/eth-wallet-js#readme",
+  "devDependencies": {
+    "finalhandler": "^1.1.1",
+    "serve-static": "^1.13.2"
+  }
 }
