update package structure

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "example": "node ./example/index.js"
+    "example": "node ./example/index.js",
+    "dev": "node ./example/index.js"
   },
   "repository": {
     "type": "git",
